# ableton-control-surface-toolkit

./: .gitignore  Makefile  README.md  add_py_typed.py  copy_packages.py  fix_parse_errors.py  pyproject.toml  requirements.txt  ruff.toml
ableton-control-surface-core/: pyproject.toml
ableton-control-surface-core/src/Live/: __init__.py
ableton-control-surface-core/src/MidiRemoteScript/: __init__.py
ableton-control-surface-core/src/_Framework/: BackgroundComponent.py  ButtonElement.py  ButtonMatrixElement.py  ButtonSliderElement.py  Capabilities.py  ChannelStripComponent.py  ChannelTranslationSelector.py  ClipCreator.py  ClipSlotComponent.py  ComboElement.py  CompoundComponent.py  CompoundElement.py  Control.py  ControlElement.py  ControlSurface.py  ControlSurfaceComponent.py  Defaults.py  Dependency.py  DeviceBankRegistry.py  DeviceComponent.py  Disconnectable.py  DisplayDataSource.py  DrumGroupComponent.py  DrumRackComponent.py  EncoderElement.py  IdentifiableControlSurface.py  InputControlElement.py  Layer.py  LogicalDisplaySegment.py  MessageScheduler.py  MidiMap.py  MixerComponent.py  ModeSelectorComponent.py  ModesComponent.py  MomentaryModeObserver.py  NotifyingControlElement.py  OptionalElement.py  PhysicalDisplayElement.py  Profile.py  Proxy.py  (+19 more)
ableton-control-surface-core/src/_Generic/: Devices.py  GenericScript.py  SelectChanStripComponent.py  SpecialMixerComponent.py  __init__.py  util.py
ableton-control-surface-core/src/_MxDCore/: ControlSurfaceWrapper.py  LomTypes.py  LomUtils.py  MxDControlSurfaceAPI.py  MxDCore.py  MxDUtils.py  MxStringHandler.py  NotesAPIUtils.py  TupleWrapper.py  __init__.py
ableton-control-surface-core/src/_Tools/: __init__.py
ableton-control-surface-core/src/_Userscript/: DeviceComponent.py  __init__.py
ableton-control-surface-core/src/ableton/: __init__.py
ableton-control-surface-core/src/ableton_controlsurface_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ableton-control-surface-scripts/: pyproject.toml
ableton-control-surface-scripts/src/ADVANCE/: Advance.py  __init__.py
ableton-control-surface-scripts/src/AIRA_MX_1/: Colors.py  ControlElementUtils.py  NotifyingMixerComponent.py  NotifyingSessionComponent.py  RolandMX1.py  SkinDefault.py  __init__.py
ableton-control-surface-scripts/src/APC20/: APC20.py  BackgroundComponent.py  ShiftableSelectorComponent.py  ShiftableZoomingComponent.py  SliderModesComponent.py  __init__.py  consts.py
ableton-control-surface-scripts/src/APC40/: APC40.py  SessionComponent.py  TransportComponent.py  __init__.py
ableton-control-surface-scripts/src/APC40_MkII/: APC40_MkII.py  BankToggleComponent.py  Colors.py  MixerComponent.py  QuantizationComponent.py  TransportComponent.py  __init__.py
ableton-control-surface-scripts/src/APC64/: __init__.py  colors.py  device.py  display.py  elements.py  firmware_mode.py  global_quantization.py  mappings.py  midi.py  mixer.py  recording.py  render_to_clip.py  session.py  settings.py  skin.py  touch_strip.py  transport.py
ableton-control-surface-scripts/src/APC_Key_25/: APC_Key_25.py  MixerComponent.py  SendToggleComponent.py  __init__.py
ableton-control-surface-scripts/src/APC_Key_25_mk2/: __init__.py  colors.py  elements.py  mappings.py
ableton-control-surface-scripts/src/APC_mini/: APC_mini.py  __init__.py
ableton-control-surface-scripts/src/APC_mini_mk2/: __init__.py  colors.py  elements.py  mappings.py
ableton-control-surface-scripts/src/ATOM/: __init__.py  colors.py  drum_group.py  elements.py  keyboard.py  mappings.py  midi.py  note_pad.py  skin.py
ableton-control-surface-scripts/src/ATOMSQ/: __init__.py  colors.py  display.py  elements.py  launch_and_stop.py  mappings.py  midi.py  skin.py  touch_strip.py
ableton-control-surface-scripts/src/Akai_Force_MPC/: __init__.py  akai_force_mpc.py  background.py  channel_strip.py  clip_actions.py  clip_slot.py  control.py  device.py  device_navigation.py  device_parameters.py  elements.py  live_colors.py  mixer.py  mode.py  multi_element.py  physical_display.py  ping_pong.py  scene.py  scene_list.py  session.py  session_navigation.py  session_recording.py  skin.py  sysex.py  sysex_element.py  transport.py
ableton-control-surface-scripts/src/Alesis_V/: Alesis_V.py  __init__.py
ableton-control-surface-scripts/src/Alesis_VI/: Alesis_VI.py  __init__.py
ableton-control-surface-scripts/src/Alesis_VX/: Alesis_VX.py  __init__.py
ableton-control-surface-scripts/src/Axiom/: __init__.py  config.py  consts.py
ableton-control-surface-scripts/src/AxiomPro/: AxiomPro.py  DisplayingMixerComponent.py  EncoderMixerModeSelector.py  MixerOrDeviceModeSelector.py  NotifyingMixerComponent.py  PageableDeviceComponent.py  PeekableEncoderElement.py  SelectButtonModeSelector.py  TransportViewModeSelector.py  __init__.py
ableton-control-surface-scripts/src/Axiom_25_Classic/: Axiom.py  __init__.py
ableton-control-surface-scripts/src/Axiom_49_61_Classic/: Axiom.py  SliderSection.py  __init__.py
ableton-control-surface-scripts/src/Axiom_AIR_25_49_61/: Axiom_AIR_25_49_61.py  BestBankDeviceComponent.py  ConfigurableButtonElement.py  DeviceNavComponent.py  DisplayingChanStripComponent.py  EncoderModeSelector.py  FaderButtonModeSelector.py  FaderModeSelector.py  IdentifyingEncoderElement.py  MainModeSelector.py  NumericalDisplayElement.py  NumericalDisplaySegment.py  SingleFaderButtonModeSelector.py  SpecialMixerComponent.py  SpecialSessionComponent.py  TransportViewModeSelector.py  __init__.py  consts.py
ableton-control-surface-scripts/src/Axiom_AIR_Mini32/: AxiomAirMini32.py  DeviceNavComponent.py  EncoderMixerModeSelector.py  MixerOrDeviceModeSelector.py  __init__.py
ableton-control-surface-scripts/src/Axiom_DirectLink/: Axiom_DirectLink.py  BestBankDeviceComponent.py  DetailViewCntrlComponent.py  PeekableEncoderElement.py  ShiftableMixerComponent.py  ShiftableSessionComponent.py  ShiftableTransportComponent.py  TransportViewModeSelector.py  __init__.py
ableton-control-surface-scripts/src/BCF2000/: __init__.py  config.py  consts.py
ableton-control-surface-scripts/src/BCR2000/: __init__.py  (+2 more)
(+1160 files in other folders)
