[project]
name = "ableton-control-surface-toolkit"
version = "0.0.3"
description = ""
dynamic = ["dependencies"]
requires-python=">=3.7"

[tool.ruff]
extend = "ruff.toml"
ignore = ["ANN101"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
disallow_untyped_defs = true