[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ableton-control-surface-core"
version = "0.0.2"
authors = [
    {name = "Martin Sahlen", email = "martin8900@gmail.com"}
]
description = "Decompiled core packages from Ableton Live's Python API to help developers build custom control surfaces."
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Multimedia :: Sound/Audio :: MIDI"
]

[project.urls]
Homepage = "https://github.com/oslo1989/ableton-control-surface-toolkit"
Issues = "https://github.com/oslo1989/ableton-control-surface-toolkit/issues"
