[build-system]
requires = ["setuptools ~=69.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ableton-control-surface-scripts"
version = "0.0.3"
authors = [
    {name = "Martin Sahlen", email = "martin8900@gmail.com"}
]
description = "Decompiled control surface scripts from Ableton Live's Python API to help with reverse engineering and how other well known interfaces work."
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Multimedia :: Sound/Audio :: MIDI"
]
dependencies = [
    "ableton-control-surface-core == 1.0.0"
]

[project.urls]
Homepage = "https://github.com/oslo1989/ableton-control-surface-toolkit"
Issues = "https://github.com/oslo1989/ableton-control-surface-toolkit/issues"