[build-system]
requires = ["setuptools ~=68.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ableton-control-surface-scripts"
version = "0.0.7"
authors = [
    {name = "Martin Sahlen", email = "martin8900@gmail.com"}
]
description = "Decompiled control surface scripts from Ableton Live's Python API to help with reverse engineering and how other well known interfaces work."
requires-python = ">=3.7"
classifiers = [
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Multimedia :: Sound/Audio :: MIDI"
]
dependencies = [
    "ableton-control-surface-core == 1.0.0"
]

[project.urls]
Homepage = "https://github.com/oslo1989/ableton-control-surface-toolkit"
Issues = "https://github.com/oslo1989/ableton-control-surface-toolkit/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]